# digital-credential-data-models

./: Cargo.toml  README.md
crates/macro-derive/: Cargo.toml  README.md
crates/macro-derive/src/: enum_derive.rs  gen_json_paths.rs  lib.rs  tag_type_derive.rs
crates/types-common/: Cargo.toml  test.rs
crates/types-common/src/: lib.rs  traits.rs
crates/types-elm-v3/: Cargo.toml  schema.json  test.rs
crates/types-elm-v3/src/: codegen.rs  codegen1.rs  codegen2.rs  dummy.tst  lib.rs
crates/types-elm-v3/tests/: tests.rs
crates/types-ob-v3/: Cargo.toml  README.md
crates/types-ob-v3/src/: achievement.rs  achievement_credential.rs  achievement_subject.rs  alignment.rs  endorsement.rs  general.rs  identity.rs  lib.rs  profile.rs  proof_evidence.rs  related.rs  result.rs
crates/types-ob-v3/tests/obv3_json_examples/: alignment_credential_engine.json  basic_achievement_credential.json  full_achievement_credential.json  skill_assertion_case.json
crates/types-ob-v3/tests/tests/: alignment_case.rs  alignment_credential_engine.rs  basic_achievement_credential.rs  endorsement_credential.rs  full_achievement_credential.rs  skill_assertion_case.rs  skill_assertion_credential_engine.rs
crates/validator/: Cargo.toml  README.md  fetch-json.sh  init-py.sh
crates/validator/elm-requests/: bengales-highschool-diploma.json  credential-sample.json  francisco-cruz-argudo-cert-of-completion.json
crates/validator/shacl-validator/: EDC-generic-full.rdf  README.md  main.py  requirements.txt  shape.ttl
crates/validator/src/: lib.rs  validator.rs
crates/validator/src/py-shacl-validator/: ELM.rdf  data.ttl  main.py  serialize.rs  shape.json  shape.ttl
crates/validator/src/shacl-validator/: .gitignore  credential-sample.json  data.ttl  main.py  shape.ttl
src/: achievement.rs  achievement_credential.rs  alignment.rs  endorsement.rs  general.rs  identity.rs  json_schema.rs  lib.rs  profile.rs  proof_evidence.rs  result.rs
src/json_schema/: achievement.rs  achievement_credential.rs  achievement_subject.rs  alignment.rs  endorsement.rs  general.rs  identity.rs  json_schema.rs  mod.rs  profile.rs  proof_evidence.rs  related.rs  result.rs
src/tests/: achievement_credential.rs  mod.rs  obv3_examples_tests.rs
src/tests/json_examples/: endorsement_credential.json  full_achievement_credential.json
tests/: obv3_examples_tests.rs
tests/obv3_json_examples/: skill_assertion_credential_engine.json
tests/tests/: alignment_case.rs  alignment_credential_engine.rs  basic_achievement_credential.rs  endorsement_credential.rs  full_achievement_credential.rs  mod.rs  obv3_examples_tests.rs  skill_assertion_case.rs  skill_assertion_credential_engine.rs
