[workspace]
members = ["crates/*"]
resolver = "2"

[package]
name = "openbadges"
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regress = "0.7"
chrono = { version = "0.4", features = ["serde"] }

[dependencies]
types-elm-v3 = { path = "crates/types-elm-v3" }
types-ob-v3 = { path = "crates/types-ob-v3" }
