[workspace]
members = ["crates/*"]
resolver = "2"

[package]
name = "openbadges"
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_stacker = "0.1"
serde_json = { version = "1.0", features = ["unbounded_depth"] }
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11"
log = "0.4"
regex = "1.10"
fluent-uri = "=0.2.0-alpha.5"

[dependencies]
types-elm-v3 = { path = "crates/types-elm-v3" }
types-ob-v3 = { path = "crates/types-ob-v3" }
types-common = { path = "crates/types-common" }
