[package]
name = "types-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
serde_stacker = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
macro-derive = { path = "../macro-derive" }
time = { version = "0.3", features = ["serde", "macros", "parsing"] }
