[package]
name = "types-common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_stacker = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
macro-derive = { path = "../macro-derive" }
iso8601-duration = "0.2.0"
