[package]
name = "types-elm-v3"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
fluent-uri = { workspace = true }
types-common = { path = "../types-common" }
time = { version = "0.3.36", features = ["serde", "macros", "parsing"] }
